[package]
name = "rsa-solver"
version = "0.1.0"
authors = ["solomonu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1"
num-bigint = "0.2"
modinverse = "0.1"
num-traits = "0.2"
crossbeam-channel = "0.4"
tokio = { version = "0.2", features = ["full"] }
primal-tokio = "0.1"
futures-core = "0.3"

# primal = "0.2"
# pool = "0.1"
# lifeguard = "0.6"
# deadpool = "0.5"
# dynamic-pool = "0.2"
# smartpool = "0.3"
# scoped-pool = "1"
# threads_pool = "0.2"
# workerpool = "1"
# thread-pool = "0.1"
# slave-pool = "0.2"
# executors = "0.6"
# fumio-pool = "0.1"
# pool_barrier = "0.1"
# wild_thread_pool = "0.4"
# dynpool = "0.0.2"
# poolite = "0.7"
# threading = "0.1"
# join = "0.1"
# scoped_threads = "0.1"
# thread_io = "0.2"
# borrowed-thread = "0.1"
# thread_spawn = "0.4"
# send_wrapper = "0.4"
# ice-threads = "0.1"
# threadgroup = "0.1"
# thread-priority = "0.2"
# jod-thread = "0.1"
# thread-object = "0.2"
# managed-thread = "0.0.1"
# thread-scoped = "1"
# atomic-counter = "1"
# reqchan = "0.5"
# async-thread = "0.1"
# thread-locker = "0.1"
# concurrent_prime_sieve = "0.3"
# thread-control = "0.1"
# voluntary-servitude = "4"
# wombo = "0.1"
# movie = "0.1"
# multiqueue2 = "0.1"
# panic_monitor = "0.2"
# sharded-slab = "0.0.8"
# thread_tryjoin = "0.2"
# #alloc-tls = "0.1"
# hurdles = "1"
# multiqueue = "0.3"
# queuecheck = "0.1"
# coroutines = "0.2"
# runloop = "0.1"
# scheduled-thread-pool = "0.2"
# spin-sync = "0.1"
# thunks = "0.1"
# canal = "0.1"
